fix footer translate on mobile

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -143,7 +143,7 @@
     font-size: 1.8rem;
 
     @include screen('small') {
-      transform: translateY(-9rem);
+      transform: translateY(-12rem);
     }
 
     a {
